--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=sql.itcn.dk;Database=magn82442.SKOLE;User ID=magn8244.SKOLE;Password=72Xh87JnCn;trustServerCertificate=True;MultipleActiveResultSets=true",
+    "AllowedHosts": "*"
+  }
 }
